<resources>
    <string name="app_name">TINDNET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Bienvenida">Bienvenid@! Para hacer uso de nuestros servicios, deberá iniciar sesión, si por el contrario no dispone de una cuenta, regístrese.</string>
    <string name="BTN_login">Inicio sesión</string>
    <string name="BTN_register">Registro</string>
    <string name="inicio">Inicio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Inicio sesión</string>
    <string name="menu_register">Registro</string>
    <string name="menu_regusuario">Registro usuario</string>
    <string name="Instruccion">En esta ventana, usted deberá elegir como iniciar sesión depende su finalidad con esta aplicación.</string>
    <string name="InstruccionRegister">En esta ventana, usted deberá elegir como desea registrarse, dependiendo que use le vaya a dar a nuestros servicios.</string>
    <string name="BTN_LoginUsuario">Inicio sesión como usuario</string>
    <string name="BTN_LoginEmpresa">Inicio sesión como empresa</string>
    <string name="tindnet">TINDNET</string>
    <string name="BTN_RegisterUsuario">Registro como usuario</string>
    <string name="BTN_RegisterEmpresa">Registro como empresa</string>
    <string name="NomRegUsuario">Nombre de Usuario</string>
    <string name="HintDNiReg">Introduzca su DNI</string>
    <string name="TelReg">Nº Teléfono</string>
    <string name="EmailReg">Correo electrónico</string>
    <string name="PasswordReg">Contraseña</string>
    <string name="BTN_Regusuario">Enviar</string>
    <string name="nav_logusuario">Inicio sesión usuarios</string>
    <string name="nav_regusuario">Registro usuarios</string>
    <string name="EmailLogusuario">Correo electrónico</string>
    <string name="PasswordLogUsuarioText">Contraseña</string>
    <string name="Tindnet">Tindnet</string>
    <string name="Regempresa">Registro empresa</string>
    <string name="NomRegEmpresa">Nombre de la empresa</string>
    <string name="NumRegEmpresa">Nº Identificación fiscal</string>
    <string name="EmailRegEmpresa">Correo electrónico</string>
    <string name="PasswordRegEmpresa">Contraseña</string>
    <string name="DescRegEmpresa">Descripción breve</string>
    <string name="TelRegEmpresa">Nº Teléfono</string>
    <string name="WebRegEmpresa">Sitio Web (Si dispone de uno)</string>
    <string name="SectorRegEmpresa">Sector/Categoría</string>
    <string name="RazónRegEmpresa">Razón social/Ubicación</string>
    <string name="HorariosRegEmpresa">Horario</string>
    <string name="Documentos">Documentos (Certificados, documentos legales, Formato PDF)</string>
    <string name="BTNDocumentos">Subir documentos</string>
    <string name="Imágenes">Imágenes relevantes (empresa, producto, Formato PNG/JPG)</string>
    <string name="BTNImágenes">Subir imágenes</string>
    <string name="Logo">Logotipo (Formato PNG)</string>
    <string name="BTNLogo">Subir logotipo</string>
    <string name="logempresa">Inicio sesión empresa</string>
    <string name="NumFiscal">Nº Identificación fiscal</string>
    <string name="TindnetEmpresa">Tindnet Empresa</string>
</resources>