<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_register"
            android:title="@string/menu_register" />

        <item
            android:id="@+id/nav_regusuario"
            android:title="@string/nav_regusuario" />

        <item
            android:id="@+id/nav_RegEmpresa"
            android:title="@string/Regempresa" />

        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_logusuario"
            android:title="@string/nav_logusuario" />

        <item
            android:id="@+id/nav_logempresa"
            android:title="@string/logempresa" />

        <item
        android:id="@+id/nav_Tindnet"
        android:title="@string/Tindnet" />

        <item
            android:id="@+id/nav_TindnetEmpresa"
            android:title="@string/TindnetEmpresa" />

        <item
            android:id="@+id/nav_Favoritos"
            android:title="@string/FavoritosFragment" />

    </group>
</menu>