<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tindnet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.tindnet.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.tindnet.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_regusuario"
        android:name="com.example.tindnet.ui.register.RegUsuarioFragment"
        android:label="@string/menu_regusuario"
        tools:layout="@layout/fragment_reg_usuario" />

    <fragment
        android:id="@+id/nav_RegEmpresa"
        android:name="com.example.tindnet.ui.register.RegEmpresaFragment"
        android:label="@string/Regempresa"
        tools:layout="@layout/fragment_reg_empresa" />

    <fragment
        android:id="@+id/nav_logusuario"
        android:name="com.example.tindnet.ui.login.LogUsuarioFragment"
        android:label="@string/nav_logusuario"
        tools:layout="@layout/fragment_log_usuario" />

    <fragment
        android:id="@+id/nav_Tindnet"
        android:name="com.example.tindnet.ui.Tindnet.TindnetFragment"
        android:label="@string/tindnet"
        tools:layout="@layout/fragment_tindnet" />

</navigation>