<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/borde_redondeado"
        android:fontFamily="sans-serif"
        android:padding="15dp"
        android:text="@string/Instruccion"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationY="60dp" />

    <Button
        android:id="@+id/BTNLoginUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/componentes"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/BTN_LoginUsuario"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:translationY="100dp"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/BTNLoginEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/componentes"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/BTN_LoginEmpresa"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:translationY="150dp"
        app:cornerRadius="10dp" />
</LinearLayout>